# requests-recorder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requests.db
.github/workflows/: test.yml
src/requests_recorder/: __init__.py
src/requests_stats/: adapter.py  cli.py
src/requests_stats/openapi/: coverage.py  terminal_reporter.py
src/requests_stats/recorder/: base.py  in_memory_recorder.py  sqlite_recorder.py
tests/: test_adapter.py
tests/openapi/: test_parser_playground.py
tests/openapi/coverage/: test_terminal_reporter.py
