[project]
name = "requests-recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DudeNr33", email = "3929834+DudeNr33@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
